# Examen1

./: CMakeLists.txt  README.md
Ejercicios/: Ejercicio3.cpp  Ejercicios5-8.cpp  Ejerciocio4.cpp  ejercicio2.cpp  main.cpp
