cmake_minimum_required(VERSION 3.26)
project(Examen1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Examen1
        .idea/.gitignore
        .idea/workspace.xml
        Ejercicios/main.cpp
        README.md
        Ejercicios/ejercicio2.cpp
        Ejercicios/Ejercicio3.cpp
        Ejercicios/Ejerciocio4.cpp
        Ejercicios/Ejercicios5-8.cpp
)
